force-app/main/default/objects/Market__c/fields/SSC_Email_Distribution_ID__c.field-meta.xml
<CustomField>
    <fullName>SSC_Email_Distribution_ID__c</fullName>
    <description>SSC Email Distribution ID of Market object</description>
    <label>SSC Email Distribution ID</label>
    <type>Email</type>
</CustomField>