force-app/main/default/objects/Market__c/fields/x_Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>x_Brand_Code__c</fullName>
    <description>Brand Code of Market object</description>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>