force-app/main/default/objects/Market__c/fields/x_CORE_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>x_CORE_Legacy_Id__c</fullName>
    <description>Core Legacy Id of Market object.</description>
    <label>Core Legacy Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>